--- a/Service/Asset/Asset.vcxproj
+++ b/Service/Asset/Asset.vcxproj
@@ -64,7 +64,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Builder\AssetBuilderRawBuffer.cpp" />
-    <ClCompile Include="AssetSourceFilesystemDirectory.cpp" />
+    <ClCompile Include="AssetSourceFilesystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asset.hpp" />
@@ -72,7 +72,7 @@
     <ClInclude Include="AssetManager.hpp" />
     <ClInclude Include="Builder\AssetBuilderRawBuffer.hpp" />
     <ClInclude Include="AssetSource.hpp" />
-    <ClInclude Include="AssetSourceFilesystemDirectory.hpp" />
+    <ClInclude Include="AssetSourceFilesystem.hpp" />
     <ClInclude Include="Crc32.hpp" />
     <ClInclude Include="RefCounted.hpp" />
     <ClInclude Include="TypeId.hpp" />
