update project properties

--- a/Common/Time/Time.vcxproj.filters
+++ b/Common/Time/Time.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Clock.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ComponentTimestamp.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
