--- a/Platform/WinCommon/WinCommon.vcxproj.filters
+++ b/Platform/WinCommon/WinCommon.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="File.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Win32.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
