--- a/Common/Time/Time.vcxproj
+++ b/Common/Time/Time.vcxproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <ClInclude Include="Clock.hpp" />
     <ClInclude Include="ComponentTimestamp.hpp" />
+    <ClInclude Include="ServiceMasterClock.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
