--- a/Platform/WinCommon/WinCommon.vcxproj.filters
+++ b/Platform/WinCommon/WinCommon.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="Input\RawInputSink.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Windowing\NativeWindowManagerWin32.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Windowing\NativeWindowWin32.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Memory.cpp">
@@ -54,6 +60,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Input\RawInputSink.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Windowing\NativeWindowManagerWin32.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Windowing\NativeWindowWin32.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
