--- a/Service/Windowing/Windowing.vcxproj
+++ b/Service/Windowing/Windowing.vcxproj
@@ -12,8 +12,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{cd325def-b361-4cc5-87ac-bf51588dbf2d}</ProjectGuid>
-    <RootNamespace>WinCommon</RootNamespace>
+    <ProjectGuid>{bdf27242-7a3c-4dd2-b7c8-62962c96ca08}</ProjectGuid>
+    <RootNamespace>Windowing</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -59,33 +59,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Input\InputEventSourceWin32RawInput.hpp" />
-    <ClInclude Include="Input\Input.hpp" />
-    <ClInclude Include="Input\RawInputSink.hpp" />
-    <ClInclude Include="Windowing\NativeWindowManagerWin32.hpp" />
-    <ClInclude Include="ntos.h" />
-    <ClInclude Include="Win32.hpp" />
-    <ClInclude Include="Windowing\NativeWindowWin32.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="File.cpp" />
-    <ClCompile Include="Input\InputEventSourceWin32RawInput.cpp" />
-    <ClCompile Include="Input\Keyboard.cpp" />
-    <ClCompile Include="Input\Mouse.cpp" />
-    <ClCompile Include="Input\RawInputSink.cpp" />
-    <ClCompile Include="Input\VirtualKey.cpp" />
-    <ClCompile Include="Memory.cpp" />
-    <ClCompile Include="Windowing\NativeWindowManagerWin32.cpp" />
-    <ClCompile Include="Win32.cpp" />
-    <ClCompile Include="Windowing\NativeWindowWin32.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\Library\Usagi\Usagi.vcxproj">
-      <Project>{f9061c06-bce6-416b-9aeb-31351810b7ba}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Service\Input\Input.vcxproj">
-      <Project>{c87b711a-0036-4d0e-aa0b-501677f198fd}</Project>
-    </ProjectReference>
+    <ClInclude Include="ComponentNativeWindow.hpp" />
+    <ClInclude Include="NativeWindow.hpp" />
+    <ClInclude Include="ServiceNativeWindowManager.hpp" />
+    <ClInclude Include="SystemNativeWindowCoordinator.hpp" />
+    <ClInclude Include="WindowEventListener.hpp" />
+    <ClInclude Include="NativeWindowManager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
