--- a/Platform/WinCommon/WinCommon.vcxproj.filters
+++ b/Platform/WinCommon/WinCommon.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Windowing\NativeWindowWin32.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WindowMessageTarget.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Memory.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Windowing\NativeWindowWin32.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WindowMessageTarget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
