--- a/Platform/WinCommon/WinCommon.vcxproj
+++ b/Platform/WinCommon/WinCommon.vcxproj
@@ -60,7 +60,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Input\InputEventSourceWin32RawInput.hpp" />
-    <ClInclude Include="Input\Input.hpp" />
+    <ClInclude Include="Input\VirtualKey.hpp" />
     <ClInclude Include="Input\RawInputSink.hpp" />
     <ClInclude Include="WindowMessageTarget.hpp" />
     <ClInclude Include="Windowing\NativeWindowManagerWin32.hpp" />
@@ -71,8 +71,6 @@
   <ItemGroup>
     <ClCompile Include="File.cpp" />
     <ClCompile Include="Input\InputEventSourceWin32RawInput.cpp" />
-    <ClCompile Include="Input\Keyboard.cpp" />
-    <ClCompile Include="Input\Mouse.cpp" />
     <ClCompile Include="Input\RawInputSink.cpp" />
     <ClCompile Include="Input\VirtualKey.cpp" />
     <ClCompile Include="Memory.cpp" />
