handle WM_SIZE/WM_MOVE instead of WM_WINDOWPOSCHANGED; record window state.

--- a/Service/Windowing/Windowing.vcxproj
+++ b/Service/Windowing/Windowing.vcxproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <ClInclude Include="ComponentNativeWindow.hpp" />
     <ClInclude Include="NativeWindow.hpp" />
+    <ClInclude Include="NativeWindowState.hpp" />
     <ClInclude Include="ServiceNativeWindowManager.hpp" />
     <ClInclude Include="SystemNativeWindowCoordinator.hpp" />
     <ClInclude Include="NativeWindowManager.hpp" />
