Executive: Accessor for world database in AppHost; fix default parameter for update(). Add a service for handling program state transitions.

--- a/Common/Executive/Executive.vcxproj
+++ b/Common/Executive/Executive.vcxproj
@@ -61,6 +61,7 @@
     <ClInclude Include="AppDatabase.hpp" />
     <ClInclude Include="AppDirectory.hpp" />
     <ClInclude Include="AppHost.hpp" />
+    <ClInclude Include="ServiceTransitionGraph.hpp" />
     <ClInclude Include="SystemTaskList.hpp" />
   </ItemGroup>
   <ItemGroup>
