--- a/Common/Executive/Executive.vcxproj.filters
+++ b/Common/Executive/Executive.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="AppDatabase.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ServiceTransitionGraph.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CreateLib.cpp">
