switched to dynamic dispatch loader

--- a/Platform/Vulkan/Vulkan.vcxproj.filters
+++ b/Platform/Vulkan/Vulkan.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="VulkanEnum.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vulkan.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VulkanSwapchain.cpp">
