--- a/Platform/Vulkan/Vulkan.vcxproj
+++ b/Platform/Vulkan/Vulkan.vcxproj
@@ -44,9 +44,6 @@
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
-    <Lib>
-      <AdditionalDependencies>vulkan-1.lib</AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -60,11 +57,9 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
-    <Lib>
-      <AdditionalDependencies>vulkan-1.lib</AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Vulkan.hpp" />
     <ClInclude Include="VulkanEnum.hpp" />
     <ClInclude Include="VulkanSwapchain.hpp" />
     <ClInclude Include="VulkanCommandListGraphics.hpp" />
