--- a/IO/WindowSystemIntegration/WindowSystemIntegration.vcxproj
+++ b/IO/WindowSystemIntegration/WindowSystemIntegration.vcxproj
@@ -12,8 +12,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{e13613a3-b719-4bc5-991a-507402d14c25}</ProjectGuid>
-    <RootNamespace>Logging</RootNamespace>
+    <ProjectGuid>{07b96122-1eb3-49fa-b509-bc227d280cf8}</ProjectGuid>
+    <RootNamespace>WindowSystemIntegration</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -24,7 +24,6 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>ClangCL</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -40,17 +39,10 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <ConformanceMode>true</ConformanceMode>
-      <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
-    <Lib>
-      <AdditionalDependencies>fmtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
-    <Bscmake>
-      <PreserveSbr>true</PreserveSbr>
-    </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -64,18 +56,17 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
-    <Lib>
-      <AdditionalDependencies>fmt.lib;%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Logging.cpp">
-      <BrowseInformation Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</BrowseInformation>
-    </ClCompile>
+    <ClInclude Include="SystemSwapchainRelease.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Format.hpp" />
-    <ClInclude Include="Logging.hpp" />
+    <ProjectReference Include="..\Graphics\Graphics.vcxproj">
+      <Project>{5ae8f2da-6b3e-4492-a009-112a62b056be}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Windowing\Windowing.vcxproj">
+      <Project>{bdf27242-7a3c-4dd2-b7c8-62962c96ca08}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
