Revert "Auxiliary commit to revert individual files from 7d1c36635eb128f9f1d265d7925057481998d5f8"
This reverts commit 6599f1231fa307ef8dd93d0daa8b3a97dfb0b61c.

--- a/Common/Logging/Logging.vcxproj
+++ b/Common/Logging/Logging.vcxproj
@@ -40,7 +40,6 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <ConformanceMode>true</ConformanceMode>
-      <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -48,9 +47,6 @@
     <Lib>
       <AdditionalDependencies>fmtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
-    <Bscmake>
-      <PreserveSbr>true</PreserveSbr>
-    </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -69,9 +65,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Logging.cpp">
-      <BrowseInformation Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</BrowseInformation>
-    </ClCompile>
+    <ClCompile Include="Logging.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Format.hpp" />
