--- a/Platforms/WinCommon/WinCommon.vcxproj
+++ b/Platforms/WinCommon/WinCommon.vcxproj
@@ -83,7 +83,7 @@
     <ProjectReference Include="..\..\..\..\..\Library\Usagi\Usagi.vcxproj">
       <Project>{f9061c06-bce6-416b-9aeb-31351810b7ba}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Services\Input\Input.vcxproj">
+    <ProjectReference Include="..\..\IO\Input\Input.vcxproj">
       <Project>{c87b711a-0036-4d0e-aa0b-501677f198fd}</Project>
     </ProjectReference>
   </ItemGroup>
