--- a/Runtime/Asset/Asset.vcxproj.filters
+++ b/Runtime/Asset/Asset.vcxproj.filters
@@ -15,42 +15,27 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Builder\AssetBuilderRawBuffer.cpp">
+    <ClCompile Include="Package\AssetPackageFilesystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="AssetSourceFilesystem.cpp">
+    <ClCompile Include="AssetManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AssetSource.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Builder\AssetBuilderRawBuffer.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="TypeId.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Crc32.hpp">
+    <ClInclude Include="Asset.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AssetManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Asset.hpp">
+    <ClInclude Include="Package\AssetPackage.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AssetCacheEntry.hpp">
+    <ClInclude Include="Package\AssetPackageFilesystem.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RefCounted.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="AssetSourceFilesystem.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ServiceAssetManager.hpp">
+    <ClInclude Include="AssetQuery.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
