use secondary asset interface instead of std::any

--- a/Runtime/Asset/Asset.vcxproj
+++ b/Runtime/Asset/Asset.vcxproj
@@ -67,7 +67,8 @@
     <ClInclude Include="AssetManager.hpp" />
     <ClInclude Include="Package\AssetPackage.hpp" />
     <ClInclude Include="Package\AssetPackageFilesystem.hpp" />
-    <ClInclude Include="SecondaryAssetConstructor.hpp" />
+    <ClInclude Include="SecondaryAsset.hpp" />
+    <ClInclude Include="SecondaryAssetHandler.hpp" />
     <ClInclude Include="ServiceAssetManager.hpp" />
   </ItemGroup>
   <ItemGroup>
