--- a/Runtime/ProgramModule/ProgramModule.vcxproj.filters
+++ b/Runtime/ProgramModule/ProgramModule.vcxproj.filters
@@ -26,7 +26,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ServiceRuntimeCompilation.hpp">
+    <ClInclude Include="ServiceJitCompilation.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ClangJIT.hpp">
