--- a/Runtime/Executive/Executive.vcxproj.filters
+++ b/Runtime/Executive/Executive.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="ServiceStateTransitionGraph.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DatabaseTraits.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CreateLib.cpp">
