--- a/Gameplay/Scripting/Scripting.vcxproj
+++ b/Gameplay/Scripting/Scripting.vcxproj
@@ -61,6 +61,17 @@
     <ClInclude Include="ComponentCoroutineContinuation.hpp" />
     <ClInclude Include="SystemInvokeScriptCoroutine.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Assets\SahProgramModule\SahProgramModule.vcxproj">
+      <Project>{10c7f91a-9061-4691-a5de-c115bcc5cf50}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Runtime\Asset\Asset.vcxproj">
+      <Project>{8722e8a6-ddc8-4283-8dff-45cd15e7dc6f}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="CreateLib.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
