--- a/Common/Math/Math.vcxproj
+++ b/Common/Math/Math.vcxproj
@@ -18,7 +18,7 @@
     <ClInclude Include="Matrix.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lib.cpp" />
+    <ClCompile Include="CreateLib.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
